k8s-101/lesson-4/3/03-ns-pod-svc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: demo-ns
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo-ns
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: demo-ns
spec:
  rules:
    - host: test.example
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
